--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
@@ -40,6 +41,7 @@
     "react-hook-form": "^7.69.0",
     "react-router-dom": "^7.11.0",
     "sonner": "^2.0.7",
+    "vaul": "^1.1.2",
     "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
