--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.69.0",
