--- a/apps/web-store/package.json
+++ b/apps/web-store/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@app/shared": "workspace:^",
+    "@astrojs/node": "^9.5.1",
     "@astrojs/react": "^4.4.2",
+    "@nanostores/react": "^1.0.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.6",
+    "nanostores": "^1.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18",
-    "zustand": "^5.0.9"
+    "unstorage": "^1.17.3"
   }
 }
