--- a/apps/web-store/tsconfig.json
+++ b/apps/web-store/tsconfig.json
@@ -7,6 +7,11 @@
   "exclude": [
     "dist"
   ],
+  "paths": {
+    "@/*": [
+      "src/*"
+    ]
+  },
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "react"
