feat(auth): 添加 GitHub 和微信 OAuth 登录功能
实现第三方登录功能，包括：
1. 新增 member_auth 表存储第三方认证信息
2. 添加 GitHub 和微信登录策略
3. 创建系统配置模块管理 OAuth 配置
4. 前端添加第三方登录按钮
5. 支持动态加载 OAuth 配置
6. 优化登录页面 UI

新增依赖：
- passport-github2
- passport-wechat
- @types/passport-github2

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/passport-github2": "^1.2.9",
     "ali-oss": "^6.23.0",
     "aws-sdk": "^2.1693.0",
     "axios-retry": "^4.5.0",
@@ -58,7 +59,9 @@
     "nanoid": "^5.1.6",
     "node-xlsx": "^0.24.0",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
+    "passport-wechat": "^2.0.4",
     "path-to-regexp": "^8.3.0",
     "proxy-agent": "^6.5.0",
     "redis": "^5.10.0",
