--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cron": "^4.4.0",
+    "decimal.js": "^10.6.0",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "joi": "^18.0.2",
@@ -79,6 +80,7 @@
     "@nestjs/swagger": "^11.2.3",
     "@nestjs/testing": "^11.0.1",
     "@types/ali-oss": "^6.16.13",
+    "@types/decimal.js": "^7.4.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/multer": "^1.4.13",
