feat: 添加系统日志、队列监控和Redis锁模块
refactor: 重构支付策略接口和订单处理逻辑

fix(web-store): 修复结算页地址选择和支付方式问题

style: 统一代码缩进和格式

docs: 更新项目技术栈文档

chore: 更新依赖和配置文件

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,13 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
+        # BullBoard Queues (Support for admin dashboard)
+        location /queues/ {
+            proxy_pass http://localhost:3000/queues/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
         # API Store
         location /api/store/ {
             proxy_pass http://localhost:3001/;
