--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -41,6 +41,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.69.0",
     "react-router-dom": "^7.11.0",
+    "recharts": "^3.6.0",
     "sonner": "^2.0.7",
     "vaul": "^1.1.2",
     "zod": "^4.2.1",
