--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "class-validator": "^0.14.3",
         "cookie-parser": "^1.4.7",
         "cron": "^4.4.0",
+        "date-fns": "^4.1.0",
         "decimal.js": "^10.6.0",
         "exceljs": "^4.4.0",
         "express": "^5.2.1",
@@ -66,6 +67,7 @@
         "moment": "^2.30.1",
         "mysql2": "^3.16.0",
         "nanoid": "^5.1.6",
+        "nanoid-dictionary": "^5.0.0",
         "node-xlsx": "^0.24.0",
         "passport": "^0.7.0",
         "passport-github2": "^0.1.12",
