refactor: 更新项目配置和依赖项
- 将后端数据库从PostgreSQL改为MySQL
- 更新web-admin的TS配置，启用strictNullChecks
- 为web-admin添加基础路径/admin/配置
- 修改session驱动从redis改为lru-cache
- 统一redis环境变量命名规范
- 更新package.json依赖项
- 调整axios和路由配置以支持生产环境路径
- 优化pm2配置

--- a/apps/web-admin/tsconfig.app.json
+++ b/apps/web-admin/tsconfig.app.json
@@ -24,6 +24,7 @@
     },
     /* Linting */
     "strict": false,
+    "strictNullChecks": true,
     "noImplicitAny": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
