--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "seed:products": "ts-node -r tsconfig-paths/register apps/api-admin/src/scripts/seed-products.ts"
     },
     "dependencies": {
+        "@astrojs/node": "^9.5.1",
+        "@astrojs/react": "^4.4.2",
         "@aws-sdk/client-s3": "^3.958.0",
         "@bull-board/api": "^6.16.2",
         "@bull-board/express": "^6.16.2",
@@ -43,9 +45,11 @@
         "@nestjs/passport": "^11.0.5",
         "@nestjs/platform-express": "^11.0.1",
         "@nestjs/schedule": "^6.1.0",
+        "@nestjs/swagger": "^11.2.3",
         "@nestjs/typeorm": "^11.0.0",
         "@types/passport-github2": "^1.2.9",
         "ali-oss": "^6.23.0",
+        "astro": "^5.16.6",
         "aws-sdk": "^2.1693.0",
         "axios-retry": "^4.5.0",
         "bcryptjs": "^3.0.3",
@@ -75,10 +79,14 @@
         "passport-wechat": "^2.0.4",
         "path-to-regexp": "^8.3.0",
         "proxy-agent": "^6.5.0",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
         "redis": "^5.10.0",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
+        "swagger-ui-express": "^5.0.1",
         "typeorm": "^0.3.28",
+        "unstorage": "^1.17.3",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
@@ -87,7 +95,6 @@
         "@faker-js/faker": "^10.1.0",
         "@nestjs/cli": "^11.0.0",
         "@nestjs/schematics": "^11.0.0",
-        "@nestjs/swagger": "^11.2.3",
         "@nestjs/testing": "^11.0.1",
         "@types/ali-oss": "^6.16.13",
         "@types/cookie-parser": "^1.4.10",
