feat: 新增优惠券和运费模板功能
- 添加优惠券管理功能，包括创建、编辑、删除和领取优惠券
- 实现运费模板管理，支持按地区设置运费规则和包邮条件
- 在商品管理中增加运费模板关联和重量体积字段
- 订单计算时支持优惠券和运费计算
- 前端添加优惠券领取中心和我的优惠券页面
- 后端添加省市区数据管理接口
- 更新支付服务配置加载方式

--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.143.4",
+    "@tanstack/react-virtual": "^3.13.14",
     "@tanstack/router-devtools": "^1.143.4",
     "axios": "^1.13.2",
     "cmdk": "^1.1.1",
