refactor(deployment): 移除 serve 并优化 nginx 静态文件配置
移除 pm2 中 web-admin 的 serve 配置，改为直接通过 nginx 服务静态文件
优化 nginx 配置，添加静态资源缓存策略和 HTML 文件不缓存设置

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,11 +9,22 @@ http {
     server {
         listen 80;
 
-        # Web Admin
+        # Web Admin (Static)
         location /admin/ {
-            proxy_pass http://localhost:8080/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            alias /app/apps/web-admin/dist/;
+            index index.html;
+            try_files $uri $uri/ /admin/index.html;
+
+            # Cache policy for static assets (js, css, images, etc.)
+            location ~* \.(?:js|css|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|woff|woff2)$ {
+                add_header Cache-Control "public, max-age=31536000, immutable";
+                access_log off;
+            }
+
+            # Do not cache index.html
+            location ~* \.html$ {
+                add_header Cache-Control "no-cache, no-store, must-revalidate";
+            }
         }
 
         # API Admin
