refactor(db): 移除重复依赖并添加数据库迁移配置
移除notification和queue模块中未使用的依赖
统一数据库同步配置为环境变量控制
添加typeorm迁移配置和脚本
新增售后相关实体并修复ALL_ENTITIES中的重复项

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "test:e2e": "jest --config ./apps/api-admin/test/jest-e2e.json",
-        "seed:products": "ts-node -r tsconfig-paths/register apps/api-admin/src/scripts/seed-products.ts"
+        "typeorm": "typeorm-ts-node-commonjs -d typeorm.config.ts",
+        "migration:generate": "npm run typeorm migration:generate migrations/Init",
+        "migration:run": "npm run typeorm migration:run",
+        "migration:revert": "npm run typeorm migration:revert"
     },
     "dependencies": {
         "@astrojs/node": "^9.5.1",
