--- a/packages/notification/package.json
+++ b/packages/notification/package.json
@@ -1,11 +1,6 @@
 {
-  "name": "@app/notification",
-  "version": "0.0.1",
-  "private": true,
-  "main": "./src/index.ts",
-  "dependencies": {
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/typeorm": "^11.0.0",
-    "typeorm": "^0.3.20"
-  }
+    "name": "@app/notification",
+    "version": "0.0.1",
+    "private": true,
+    "main": "./src/index.ts"
 }
